enhance AvroJsonDecimalFixer3 serialisation try to use all resurces to improve performance